# vinculum

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
tests/: __init__.py  test_ariadne_output.py  test_ariadne_parser.py  test_burrito_output.py  test_config.py  test_correlation.py  test_cross_tool_enrichment.py  test_incremental_correlation.py  test_integration.py  test_logging.py  test_new_parsers.py  test_parsers.py  test_plugin_system.py  test_run_metadata.py  test_sarif_output.py  test_suppression.py
tests/fixtures/: ariadne_report_sample.json  ariadne_sample.json  burp_sample.xml  bypassburrito_sample.json  cepheus_sample.json  checkov_sample.json  dependency_check_sample.xml  grype_sample.json  indago_sample.json  mobilicustos_sample.json  mobsf_sample.json  nessus_sample.nessus  nikto_sample.xml  nmap_sample.xml  nubicustos_containers_sample.json  nubicustos_sample.json  nuclei_sample.json  reticustos_endpoints_sample.json  reticustos_sample.json  semgrep_sample.json  snyk_sample.json  trivy_sample.json  zap_sample.xml
vinculum/: __init__.py  cli.py  config.py  logging.py  suppression.py
vinculum/correlation/: __init__.py  ai_correlator.py  engine.py  fingerprint.py
vinculum/enrichment/: __init__.py  cross_tool.py  epss.py
vinculum/models/: __init__.py  enums.py  finding.py
vinculum/output/: __init__.py  ariadne_output.py  burrito_output.py  console_output.py  json_output.py  sarif_output.py
vinculum/parsers/: __init__.py  ariadne.py  ariadne_report.py  base.py  burp.py  bypassburrito.py  cepheus.py  checkov.py  dependency_check.py  grype.py  indago.py  mobilicustos.py  mobsf.py  nessus.py  nikto.py  nmap.py  nubicustos.py  nubicustos_containers.py  nuclei.py  reticustos.py  reticustos_endpoints.py  semgrep.py  snyk.py  trivy.py  zap.py
